fixed viz 5 minor bug

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,10 @@
-assets/data/
+assets/data/original
+assets/data/viz_5_helper
+assets/data/2011.json
+assets/data/2012.json
+assets/data/2013.json
+assets/data/2014.json
+assets/data/2015.json
+assets/data/2016 (no December).json
+assets/data/2017.json
+assets/data/2018.json
